[workspace]
members = [
    "blog-server",
    "blog-client",
    "blog-cli",
    "blog-wasm"
]
resolver = "2"

[workspace.dependencies]
clap = { version ="4.5", features = ["derive"] }
tonic = "0.11"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
rand = "0.8"
tokio-stream = "0.1"
prost = "0.12"
prost-types = "0.12"